crates/hir-def/tests/snapshots/lower_snapshots__nested_classes.snap
---
source: crates/hir-def/tests/lower_snapshots.rs
expression: out
---
SOURCE:

class Outer {
    static class StaticNested {
        int x;
    }

    class Inner {
    }

    interface Iface {
    }
}

PARSE_ERRORS:
<none>
ITEM_TREE:
file (java)
class Outer @1..123
  class StaticNested [static] @19..67
    field x: int @59..60
  class Inner @73..92
  interface Iface @98..121
