crates/hir-def/tests/snapshots/lower_snapshots__open_module.snap
---
source: crates/hir-def/tests/lower_snapshots.rs
expression: out
---
SOURCE:

open module com.example.reflect {
    exports com.example.api;
}

PARSE_ERRORS:
<none>
ITEM_TREE:
file (java)
module com.example.reflect [open] @1..65
  exports com.example.api
