crates/hir-def/tests/snapshots/lower_snapshots__package_and_imports.snap
---
source: crates/hir-def/tests/lower_snapshots.rs
expression: out
---
SOURCE:

package com.example;

import java.util.List;
import java.util.*;
import static java.lang.Math.max;
import static java.util.Collections.*;

PARSE_ERRORS:
<none>
ITEM_TREE:
file (java) package com.example
import java.util.List; @23..45
import java.util.*; @46..65
import static java.lang.Math.max; @66..99
import static java.util.Collections.*; @100..138
