crates/hir-def/tests/snapshots/lower_snapshots__package_info.snap
---
source: crates/hir-def/tests/lower_snapshots.rs
expression: out
---
SOURCE:

@Deprecated
package com.example;

PARSE_ERRORS:
Expected a declaration (e.g., class, variable, or method) here. @13..20
ITEM_TREE:
file (java) package com.example
