crates/hir-def/tests/snapshots/lower_snapshots__parse_errors.snap
---
source: crates/hir-def/tests/lower_snapshots.rs
expression: out
---
SOURCE:

class Foo {
    void m( {
    }
}

PARSE_ERRORS:
Expected a type here @25..26
')' expected @35..35
';' expected @35..35
'}' expected @35..35
ITEM_TREE:
file (java)
class Foo @1..35
  method m() -> void @17..35
